  Fixed issue MR-158 - Password field not accepting Pipe
  Fixed issue MR-330 - Portable version saves log to user's profile folder
  Fixed issue MR-333 - Unnecessary prompt for 'close all open connections?'
  Fixed issue MR-342 - Incorrect view in config pane of new connection after viewing default inheritance
  Added detection of newer versions of connection files and database schemata. mRemoteNG will now refuse to open them to avoid data loss.
  Improved appearance and discoverability of the connection search box.
  If RDC 7.0 or higher is installed, the connection bar is no longer briefly shown when connecting to an RDP connection with redirect key combinations enabled.
  If RDC 8.0 or higher is installed, RDP connections automatically adjust their size when the window is resized or when toggling full screen mode.

  Fixed issue MR-339 - Connection group collapses with just one click
  Fixed issue MR-340 - Object reference not set to an instance of an object.
  Fixed issue MR-344 - Move "Always show panel tabs" option
  Fixed issue MR-350 - VerifyDatabaseVersion (Config.Connections.Save) failed. Version string portion was too short or too long.
  Fixed tabs not closing on double-click when the active tab is a PuTTY connection.

1.70 (2013-02-25):
  Fixed issue MR-332 - Can't select different tab with one click after disconnecting existing tab
  Fixed issue MR-338 - PuTTYNG crashing on fresh install of mRemoteNG
  Re-enabled PuTTYNG integration enhancements on Windows 8

1.70 Release Candidate 1 (2013-02-22):
  Fixed issue MR-183 - Error trying to save connections when using SQL - Invalid column name _parentConstantId
  Fixed issue MR-225 - Tabs do not open in a panel until multiple panels are displayed.
  Fixed issue MR-229 - Integrated PuTTY doesn't work in Windows 8 RP
  Fixed issue MR-264 - Windows 8 support
  Fixed issue MR-317 - Difficulty right-clicking on Tab
  Fixed issue MR-318 - Wrong tab gets selected when tab names overflow on the tab bar